Added relavant pages for (Stock, Survellance and Fridge Coverage)

--- a/site/src/index.html
+++ b/site/src/index.html
@@ -61,19 +61,19 @@
               </a>
             </li>
             <li ui-sref-active="active">
-              <a href ui-sref="about">
+              <a href ui-sref="stock">
                 <i class="fa fa-info-circle"></i>
                 Stock Management
               </a>
             </li>
-            <li>
-              <a href="coverage">
+            <li ui-sref-active="active">
+              <a ui-sref="fridge">
                 <i class="fa fa-book"></i>
                 Fridge Coverage
               </a>
             </li>
-            <li>
-              <a href="survelance">
+            <li ui-sref-active="active">
+              <a ui-sref="survellance">
                 <i class="fa fa-github-alt"></i>
                 Survellance
               </a>
