--- a/src/index.html
+++ b/src/index.html
@@ -78,6 +78,12 @@
                 Survellance
               </a>
             </li>
+             <li ui-sref-active="active">
+              <a ui-sref="admin">
+                <i class="fa fa-github-alt"></i>
+                Admin
+              </a>
+            </li>
           </ul>
         </div>
       </div>
